[project]
name = "ollama-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "ollama",
    "tabulate"
]
scripts = { "ollama-benchmark" = "benchmark:main" }

[tool.setuptools]
py-modules = ["benchmark"]
